samples/_failures_safe/1761293128_f09da5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a556ba08.c: In function ‘main’:
./samples/SAFE/__tmp_a556ba08.c:140:9: error: expected declaration or statement at end of input
  140 |         print_matrix(&mat1, "Original");
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_a556ba08.c:140:9: error: expected declaration or statement at end of input
